# dynamodb-ocaml

./: .gitignore  README.md  dune-project  dynamodb.opam  flake.nix
lib/: dune  request.ml  signing.ml
